fix: upgrade all ui deps

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -85,7 +85,10 @@
                 }
               ]
             },
-            "development": {},
+            "development": {
+              "sourceMap": true,
+              "optimization": false
+            },
             "production": {
               "optimization": true,
               "outputHashing": "all",
