--- a/contrib/integrations/Makefile
+++ b/contrib/integrations/Makefile
@@ -1,5 +1,6 @@
 build: $(TARGET_DIST)
 	$(MAKE) build -C arsenal/plugin-arsenal OS="$(OS)" ARCH="$(ARCH)"
+	$(MAKE) build -C arsenal/plugin-arsenal-delete-alternative OS="$(OS)" ARCH="$(ARCH)"
 	$(MAKE) build -C artifactory/plugin-artifactory-build-info OS="$(OS)" ARCH="$(ARCH)"
 	$(MAKE) build -C artifactory/plugin-artifactory-download-artifact OS="$(OS)" ARCH="$(ARCH)"
 	$(MAKE) build -C artifactory/plugin-artifactory-promote OS="$(OS)" ARCH="$(ARCH)"
@@ -9,6 +10,7 @@ build: $(TARGET_DIST)
 
 clean:
 	$(MAKE) clean -C arsenal/plugin-arsenal
+	$(MAKE) clean -C arsenal/plugin-arsenal-delete-alternative
 	$(MAKE) clean -C artifactory/plugin-artifactory-build-info
 	$(MAKE) clean -C artifactory/plugin-artifactory-download-artifact
 	$(MAKE) clean -C artifactory/plugin-artifactory-promote
@@ -16,8 +18,8 @@ clean:
 	$(MAKE) clean -C artifactory/plugin-artifactory-upload-artifact
 	$(MAKE) clean -C kubernetes/plugin-kubernetes
 
-ALL_PLUGINS = arsenal/plugin-arsenal artifactory/plugin-artifactory-build-info artifactory/plugin-artifactory-download-artifact artifactory/plugin-artifactory-promote artifactory/plugin-artifactory-release artifactory/plugin-artifactory-upload-artifact kubernetes/plugin-kubernetes
-publish: 
+ALL_PLUGINS = arsenal/plugin-arsenal arsenal/plugin-arsenal-delete-alternative artifactory/plugin-artifactory-build-info artifactory/plugin-artifactory-download-artifact artifactory/plugin-artifactory-promote artifactory/plugin-artifactory-release artifactory/plugin-artifactory-upload-artifact kubernetes/plugin-kubernetes
+publish:
 	@for P in $(ALL_PLUGINS); do \
 		$(MAKE) publish -C $$P; \
 	done;
