chore: update codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # see doc on: https://help.github.com/articles/about-codeowners/
-*       @bnjjj @fsamin @richardlt @sguiheux @yesnault
+*       @fsamin @richardlt @sguiheux @yesnault
