--- a/ui/package.json
+++ b/ui/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "angular-cli": {},
   "engines": {
-    "node": ">= 14.0.0",
-    "npm": ">= 6.0.0"
+    "node": ">= 16.0.0",
+    "npm": ">= 8.5.0"
   },
   "scripts": {
     "ng": "ng",
@@ -27,31 +27,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.2.0",
-    "@angular/cdk": "13.2.0",
-    "@angular/common": "13.2.0",
-    "@angular/compiler": "13.2.0",
-    "@angular/core": "13.2.0",
-    "@angular/forms": "13.2.0",
-    "@angular/platform-browser": "13.2.0",
-    "@angular/platform-browser-dynamic": "13.2.0",
-    "@angular/router": "13.2.0",
+    "@angular/animations": "13.3.0",
+    "@angular/cdk": "13.3.0",
+    "@angular/common": "13.3.0",
+    "@angular/compiler": "13.3.0",
+    "@angular/core": "13.3.0",
+    "@angular/forms": "13.3.0",
+    "@angular/platform-browser": "13.3.0",
+    "@angular/platform-browser-dynamic": "13.3.0",
+    "@angular/router": "13.3.0",
     "@fontsource/lato": "4.5.0",
     "@icholy/duration": "5.0.0",
-    "@ngui/auto-complete": "3.0.0",
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "4.0.0",
-    "@ngxs/devtools-plugin": "3.7.0",
-    "@ngxs/logger-plugin": "3.7.0",
-    "@ngxs/store": "3.7.0",
-    "@richardlt/ng2-semantic-ui": "0.10.0-alpha.6-fork-5",
-    "@sgu/ng-semantic": "1.1.18",
+    "@ngxs/devtools-plugin": "3.7.3",
+    "@ngxs/logger-plugin": "3.7.3",
+    "@ngxs/store": "3.7.3",
+    "@richardlt/ng2-semantic-ui": "0.10.0-alpha.6-fork-6",
+    "@sgu/auto-complete": "13.0.0-rc",
+    "@sgu/ng-semantic": "13.0.0-rc2",
     "@swimlane/ngx-charts": "16.0.0",
     "@types/dagre-d3": "0.6.2",
     "@types/js-yaml": "3.12.2",
     "@types/zxcvbn": "4.4.0",
     "angular2-prettyjson": "3.0.1",
-    "angular2-toaster-sgu": "10.0.0",
+    "angular2-toaster-sgu": "13.0.0-rc",
     "animate.css": "3.7.2",
     "ansi_up": "5.0.0",
     "codemirror": "5.58.2",
@@ -63,29 +63,28 @@
     "dragula": "3.7.2",
     "enhanced-resolve": "4.1.1",
     "fast-json-patch": "2.0.7",
-    "fomantic-ui": "2.7.5",
+    "fomantic-ui": "2.8.8",
     "font-awesome": "4.7.0",
     "immutable": "4.0.0-rc.12",
     "js-beautify": "1.8.9",
     "js-yaml": "3.13.1",
     "jsonschema": "1.2.5",
     "jsrsasign": "10.2.0",
-    "lodash-es": "4.17.15",
-    "modernizr": "3.7.1",
+    "lodash-es": "4.17.21",
+    "modernizr": "3.12.0",
     "moment": "2.24.0",
     "ng-event-source": "1.0.14",
-    "ng2-codemirror-typescript": "3.0.1",
+    "ng2-codemirror-typescript": "3.13.1",
     "ng2-completer": "2.0.8",
     "ng2-dragula-sgu": "3.0.2",
-    "ngx-auto-scroll": "1.1.0",
     "ngx-clipboard": "12.1.0",
-    "ngx-infinite-scroll": "7.0.1",
-    "ngx-markdown": "10.1.1",
+    "ngx-infinite-scroll": "7.2.0",
+    "ngx-markdown": "13.1.0",
     "ngx-moment": "5.0.0",
     "postcss": "8.3.0",
-    "prismjs": "1.24.1",
+    "prismjs": "1.27.0",
     "raven-js": "3.27.2",
-    "rxjs": "6.5.4",
+    "rxjs": "6.5.5",
     "rxjs-compat": "6.3.3",
     "sanitize-html": "2.3.2",
     "spinkit": "2.0.1",
@@ -98,17 +97,17 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "13.1.0",
-    "@angular-devkit/build-angular": "13.2.1",
-    "@angular-eslint/builder": "13.0.1",
-    "@angular-eslint/eslint-plugin": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
-    "@angular-eslint/schematics": "13.0.1",
-    "@angular-eslint/template-parser": "13.0.1",
-    "@angular/cli": "13.2.1",
-    "@angular/compiler-cli": "13.2.0",
-    "@commitlint/cli": "13.0.0",
-    "@commitlint/config-conventional": "13.0.0",
-    "@compodoc/compodoc": "1.1.11",
+    "@angular-devkit/build-angular": "13.3.0",
+    "@angular-eslint/builder": "13.1.0",
+    "@angular-eslint/eslint-plugin": "13.1.0",
+    "@angular-eslint/eslint-plugin-template": "13.1.0",
+    "@angular-eslint/schematics": "13.1.0",
+    "@angular-eslint/template-parser": "13.1.0",
+    "@angular/cli": "13.3.0",
+    "@angular/compiler-cli": "13.3.0",
+    "@commitlint/cli": "13.2.1",
+    "@commitlint/config-conventional": "13.2.0",
+    "@compodoc/compodoc": "1.1.19",
     "@sentry/cli": "1.37.4",
     "@types/codemirror": "0.0.81",
     "@types/d3": "5.9.2",
@@ -130,7 +129,7 @@
     "husky": "3.0.5",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "5.0.0",
-    "karma": "6.3.2",
+    "karma": "6.3.17",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage": "2.0.3",
     "karma-jasmine": "4.0.0",
