--- a/ui/package.json
+++ b/ui/package.json
@@ -51,7 +51,6 @@
     "@types/js-yaml": "3.12.2",
     "@types/zxcvbn": "4.4.0",
     "angular2-prettyjson": "3.0.1",
-    "angular2-toaster-sgu": "13.0.0-rc",
     "animate.css": "3.7.2",
     "ansi_up": "5.0.0",
     "codemirror": "5.58.2",
@@ -74,6 +73,7 @@
     "modernizr": "3.12.0",
     "moment": "2.24.0",
     "ng-event-source": "1.0.14",
+    "ng-zorro-antd": "13.1.1",
     "ng2-codemirror-typescript": "3.13.1",
     "ng2-completer": "2.0.8",
     "ng2-dragula-sgu": "3.0.2",
