--- a/ui/angular.json
+++ b/ui/angular.json
@@ -21,15 +21,24 @@
             "polyfills": "src/polyfills.ts",
             "assets": [
               "src/assets",
-              "src/favicon.ico"
+              "src/favicon.ico",
+              {
+                "glob": "*",
+                "input": "node_modules/@ant-design/icons-angular/src/inline-svg/",
+                "output": "/assets/"
+              }, {
+                "glob": "ng-zorro-antd.dark.min.css",
+                "input": "./node_modules/ng-zorro-antd",
+                "output": "/assets/"
+              }
             ],
             "styles": [
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "node_modules/dragula/dist/dragula.css",
               "node_modules/codemirror/lib/codemirror.css",
               "node_modules/codemirror/addon/hint/show-hint.css",
               "node_modules/codemirror/addon/lint/lint.css",
               "node_modules/codemirror/theme/darcula.css",
-              "node_modules/angular2-toaster-sgu/toaster.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/animate.css/animate.min.css",
               "node_modules/prismjs/themes/prism-okaidia.css",
@@ -165,7 +174,6 @@
               "node_modules/dragula/dist/dragula.css",
               "node_modules/codemirror/lib/codemirror.css",
               "node_modules/codemirror/addon/hint/show-hint.css",
-              "node_modules/angular2-toaster-sgu/toaster.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/animate.css/animate.min.css",
               "semantic/dist/semantic.min.css",
