--- a/ui/package.json
+++ b/ui/package.json
@@ -51,7 +51,6 @@
     "@types/js-yaml": "3.12.2",
     "@types/zxcvbn": "4.4.0",
     "angular2-prettyjson": "3.0.1",
-    "angular2-toaster-sgu": "13.0.0-rc",
     "animate.css": "3.7.2",
     "ansi_up": "5.0.0",
     "codemirror": "5.58.2",
@@ -74,6 +73,7 @@
     "modernizr": "3.12.0",
     "moment": "2.24.0",
     "ng-event-source": "1.0.14",
+    "ng-zorro-antd": "13.1.1",
     "ng2-codemirror-typescript": "3.13.1",
     "ng2-completer": "2.0.8",
     "ng2-dragula-sgu": "3.0.2",
@@ -117,9 +117,9 @@
     "@types/lodash-es": "4.17.3",
     "@types/node": "12.11.1",
     "@types/sanitize-html": "2.3.1",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "@typescript-eslint/typescript-estree": "5.10.2",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
+    "@typescript-eslint/typescript-estree": "5.17.0",
     "codelyzer": "6.0.0",
     "copy-webpack-plugin": "9.0.0",
     "eslint": "8.2.0",
