refactor: remove sm-menu by nzMenu

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -26,13 +26,14 @@
                 "glob": "*",
                 "input": "node_modules/@ant-design/icons-angular/src/inline-svg/",
                 "output": "/assets/"
-              }, {
-                "glob": "ng-zorro-antd.dark.min.css",
-                "input": "./node_modules/ng-zorro-antd",
-                "output": "/assets/"
               }
             ],
             "styles": [
+              {
+                "input": "src/ngzorro.dark.less",
+                "bundleName": "ngzorro.dark",
+                "inject": false
+              },
               "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "node_modules/dragula/dist/dragula.css",
               "node_modules/codemirror/lib/codemirror.css",
