--- a/tests/03_clictl_project_vcs.yml
+++ b/tests/03_clictl_project_vcs.yml
@@ -1,27 +1,27 @@
 name: Project VCS Command TestSuite
 testcases:
-- name: import vcs server
+- name: prepare test
   steps:
-  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs import ./fixtures/my_vcs_project.yml
-  assertions:
-    - result.code ShouldEqual 0
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} project remove --force ITCLIPRJVCS
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} group remove ITCLIPRJVCS --force
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} group add ITCLIPRJVCS
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} project create ITCLIPRJVCS "Test Project" ITCLIPRJVCS
 
-- name: list vcs project
+- name: import / export vcs server
   steps:
-  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs list
-  assertions:
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs import ITCLIPRJVCS ./fixtures/my_vcs_project.yml
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs list ITCLIPRJVCS --format json
+    assertions:
     - result.code ShouldEqual 0
-
-- name: list vcs project
-  steps:
-  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs export > my_vcs_project_exported.yml
-  assertions:
-    - result.code ShouldEqual 0
+    - result.systemoutjson.systemoutjson0.name ShouldEqual "my_vcs_server"
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs export ITCLIPRJVCS my_vcs_server > my_vcs_project_exported.yml
+  - script: grep 'my_vcs_server' my_vcs_project_exported.yml
 
 - name: delete vcs project
   steps:
   - script: rm my_vcs_project_exported.yml
-  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs delete my_vcs_server
-  assertions:
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs delete ITCLIPRJVCS my_vcs_server --force
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs list ITCLIPRJVCS --format json
+    assertions:
     - result.code ShouldEqual 0
-
+    - result.systemoutjson.systemoutjson0.name ShouldNotEqual "my_vcs_server"
