--- a/tests/Makefile
+++ b/tests/Makefile
@@ -73,7 +73,7 @@ test-docker-compose:
 	TOKEN_CMD=`docker logs cds_cds-prepare_1|grep TOKEN` && \
 	$$TOKEN_CMD && \
 	./test.sh smoke_api initialization && \
-	docker-compose up -d cds-cdn cds-ui cds-hooks cds-hatchery-local cds-elasticsearch && \
+	docker-compose up -d cds-cdn cds-ui cds-hooks cds-vcs cds-hatchery-local cds-elasticsearch && \
 	echo "waiting 5s to let services start.." && sleep 5 && \
 	./test.sh smoke_services cli;
 
