fix: get repo ID + fix not found

--- a/tests/03_clictl_project_vcs_repo.yml
+++ b/tests/03_clictl_project_vcs_repo.yml
@@ -25,21 +25,26 @@ testcases:
   - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs export ITCLIPRJVCS my_vcs_server > my_vcs_project_exported.yml
   - script: grep 'my_vcs_server' my_vcs_project_exported.yml
 
-- name: add / list / delete repository on project
+- name: repositoryProject
   steps:
     - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project repository add ITCLIPRJVCS my_vcs_server gituser/myrepo
     - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project repository list ITCLIPRJVCS --vcs-name my_vcs_server --format json
       assertions:
         - result.code ShouldEqual 0
         - result.systemoutjson.systemoutjson0.reponame ShouldEqual "gituser/myrepo"
+      vars:
+        repoID:
+          from: result.systemoutjson.systemoutjson0.id
 
 - name: commitStep
   steps:
+    - script: echo {{.repositoryProject.repoID}}
+    - script: echo {{.repoID}}
     - script: git clone "http://gituser:gitpwd@localhost:3000/gituser/myrepo.git" /tmp/myrepo
     - script: mkdir -p /tmp/myrepo/.cds/models && echo 'new file' > /tmp/myrepo/.cds/models/my-worker-model.yml
     - script: cd /tmp/myrepo && git config user.email "gituser@gitea.eu" && git config user.name "gituser"
     - script: cd /tmp/myrepo && git add /tmp/myrepo/.cds/models/my-worker-model.yml && git commit .  --gpg-sign=E023B5A70E60A8A67B07FDAFA868963169F700D9 -m "add file and sign" && git push
-    - script: 'curl -H "Content-Type: application/json" -u "gituser:gitpwd" -X POST http://localhost:3000/api/v1/repos/gituser/myrepo/hooks -d "{\"active\":true, \"type\":\"gitea\", \"config\": {\"content_type\": \"json\", \"url\": \"http://google.fr\"}}"'
+    - script: 'curl -H "Content-Type: application/json" -u "gituser:gitpwd" -X POST http://localhost:3000/api/v1/repos/gituser/myrepo/hooks -d "{\"active\":true, \"type\":\"gitea\", \"config\": {\"content_type\": \"json\", \"url\": \"http://localhost:8083/v2/webhook/repository/gitea/{{.repositoryProject.repoID}}\"}}"'
       vars:
         hookID:
           from: result.systemoutjson.id
