--- a/tests/03_clictl_project_vcs_repo.yml
+++ b/tests/03_clictl_project_vcs_repo.yml
@@ -39,12 +39,11 @@ testcases:
 - name: commitStep
   steps:
     - script: echo {{.repositoryProject.repoID}}
-    - script: echo {{.repoID}}
     - script: git clone "http://gituser:gitpwd@localhost:3000/gituser/myrepo.git" /tmp/myrepo
     - script: mkdir -p /tmp/myrepo/.cds/models && echo 'new file' > /tmp/myrepo/.cds/models/my-worker-model.yml
     - script: cd /tmp/myrepo && git config user.email "gituser@gitea.eu" && git config user.name "gituser"
     - script: cd /tmp/myrepo && git add /tmp/myrepo/.cds/models/my-worker-model.yml && git commit .  --gpg-sign=E023B5A70E60A8A67B07FDAFA868963169F700D9 -m "add file and sign" && git push
-    - script: 'curl -H "Content-Type: application/json" -u "gituser:gitpwd" -X POST http://localhost:3000/api/v1/repos/gituser/myrepo/hooks -d "{\"active\":true, \"type\":\"gitea\", \"config\": {\"content_type\": \"json\", \"url\": \"http://localhost:8083/v2/webhook/repository/gitea/{{.repositoryProject.repoID}}\"}}"'
+    - script: 'curl -H "Content-Type: application/json" -u "gituser:gitpwd" -X POST http://localhost:3000/api/v1/repos/gituser/myrepo/hooks -d "{\"active\":true, \"type\":\"gitea\", \"config\": {\"content_type\": \"json\", \"url\": \"http://{{gitea.hook.url}}:8083/v2/webhook/repository/gitea/{{.repositoryProject.repoID}}\"}}"'
       vars:
         hookID:
           from: result.systemoutjson.id
@@ -53,11 +52,11 @@ testcases:
 - name: analyze
   steps:
     - script: sleep 5
-    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project analyze list ITCLIPRJVCS my_vcs_server gituser/myrep --format json
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project analyze list ITCLIPRJVCS my_vcs_server gituser/myrepo --format json
       vars:
         analyzeID:
           from: result.systemoutjson.systemoutjson0.id
-    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project analyze show ITCLIPRJVCS my_vcs_server gituser/myrep {{.analyzeID}}
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project analyze show ITCLIPRJVCS my_vcs_server gituser/myrepo {{.analyzeID}}
       retry: 10
       delay: 2
       assertions:
